--- a/src/app/taquilla/venta/venta.component.html
+++ b/src/app/taquilla/venta/venta.component.html
@@ -1,70 +1,131 @@
+<style>
+    .card {
+        border-radius: 5%;
+        border-color: darkgray;
+    }
+
+    .carousel-control-prev,
+    .carousel-control-next {
+        background-color: #c4c4c4;
+        width: 5vh;
+        height: 5vh;
+        border-radius: 50%;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+</style>
+
+
+
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <h3 class="alert alert-info text-center"><i class="fas fa-store"></i> Venta</h3>
-            <div class="row">
-                <div class="col-4">
-                    <div class="card">
-                        <div class="card-header"><strong>Tickets</strong></div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-9">
-                                    <p class="card-title">Nombre ticket</p>
-                                </div>
-                                <div class="col-3">
-                                    <div class="row">
-                                        <div class="col-5">
-                                            <div class="row">
-                                                <button type="button"
-                                                class="text-center btn btn-outline-success fas fa-plus float-right px-0"></button>
-                                            </div>
+    <div class="col-12">
+        <h5 class="alert alert-info text-center"><i class="fas fa-store"></i> Venta</h5>
+
+        <div class="container-fluid">
+            <div class="row" style="border-color: gainsboro; border-style: dashed;">
+                <h6 class="alert alert-primary " role="alert"><i class="fas fa-ticket-alt"></i> Tickets</h6>
+                <div id="carrusel" class="carousel carousel-dark slide " data-ride="carousel" data-interval="false">
+                    <div class="carousel-inner">
+                        <div class="carousel-item" *ngFor="let dato of arreglo;let i = index"
+                            [ngClass]="{'active':i === activo}">
+                            <div class="row row-cols-4">
+                                <div class="col" *ngFor="let ticket of dato">
+                                    <div class="card w-20">
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{ticket.titulo}}</h5>
+                                            <p class="card-text">Precio: {{ticket.precio}}</p>
                                         </div>
-                                        <div class="col-5">
+                                        <div class="card-footer">
                                             <div class="row">
-                                                <button type="button" class="btn btn-outline-dark fas fa-eye float-right px-0"
-                                                placement="top" ngbTooltip="Ver ticket"></button>
+                                                <div *ngIf="ticket.estado" class="col-6">
+                                                    <button type="button"
+                                                        class="w-100 text-center btn btn-outline-success fas fa-plus float-right px-0" (click)="agregar(ticket.id)"></button>
+                                                </div>
+                                                <div *ngIf="!(ticket.estado)" class="col-6">
+                                                    <button type="button"
+                                                        class="w-100 text-center btn btn-outline-danger fas float-right px-0"
+                                                        disabled>Deshabilitado</button>
+                                                </div>
+                                                <div class="col-6">
+                                                    <button type="button"
+                                                        class="w-100 btn btn-outline-primary fas fa-eye float-right px-0"></button>
+                                                </div>
                                             </div>
-                                            
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <br>
-                            <div class="row">
-                                <div class="col-9">
-                                    <p class="card-title">Nombre ticket</p>
-                                </div>
-                                <div class="col-3">
-                                    <div class="row">
-                                        <div class="col-5">
-                                            <div class="row">
-                                                <button type="button"
-                                                class="text-center btn btn-outline-success fas fa-plus float-right px-0"></button>
-                                            </div>
-                                        </div>
-                                        <div class="col-5">
-                                            <div class="row">
-                                                <button type="button" class="btn btn-outline-dark fas fa-eye float-right px-0"
-                                                placement="top" ngbTooltip="Ver ticket"></button>
-                                            </div>
-                                            
-                                        </div>
-                                    </div>
-                                </div>
+                                <!-- =============== -->
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-8">
-                    <div class="card">
-                        <div class="card-header"><strong>seleccionados</strong></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Title</h5>
-                            <p class="card-text">Content</p>
-                        </div>
-                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev"
+                        (click)="slide(0)">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carrusel" data-bs-slide="next"
+                        (click)="slide(1)">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
         </div>
+
+
+        <br>
+        <br>
+
+        <div>
+            <h6 class="alert alert-primary align-middle col-lg-12" role="alert">
+                <div class="row">
+                        <div class="col-10">
+                            <div class="mt-2 pe-5">
+                                <i class="fas fa-clipboard-list"></i> Tickets
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <button type="button" class="btn btn-success align-top float-right px-1 "><i class="far fa-save"></i> Guardar</button>
+                        </div>
+                </div>
+
+            </h6>
+            <strong class="text-end"> Precio total: {{totalVenta}}</strong>
+
+            <table class="table table-striped table-hover text-center">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">nombre</th>
+                        <th scope="col">Precio</th>
+                        <th scope="col">Cantidad</th>
+                        <th scope="col">Total</th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let ticket of listaSeleccionados;let i = index;">
+                        <th class="align-middle" scope="row">{{i+1}}</th>
+                        <td class="align-middle">{{ticket.titulo}}</td>
+                        <td class="align-middle">{{ticket.precio}}</td>
+                        <td class="col-1 align-middle">
+                          <input type="number" class="form-control w-2" [(ngModel)]="listaSeleccionados[i].cantidad" (ngModelChange)="calcularTotal()">
+                         </td>
+                         <td  class="align-middle">{{((ticket.precio)*ticket.cantidad)}}</td>
+                        <td  class="align-middle"><button type="button" class="btn btn-danger" (click)="eliminar(ticket.id)"><i class="fas fa-minus"></i></button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+
+
+
+
+
+
+
+
+
     </div>
-</div>
