--- a/src/app/usuarios/registrar-personas/registrar-personas.component.html
+++ b/src/app/usuarios/registrar-personas/registrar-personas.component.html
@@ -3,8 +3,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <link rel="stylesheet" href="registrar-personas.component.css">
-<div>
-    <div class="container">
+<div style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg); background-size: 100%;">
+    <div class="container" >
         <br>
         <p class="text-center" style="color: white;">Bienvenidos a la página de registro</p>
         <hr>
@@ -14,8 +14,8 @@
                 <p class="text-center">Inicia con tu cuenta gratis</p>
                 <p>
                     <a class="btn btn-block btn-twitter" style="color: white;"> <i class="fab fa-twitter"></i>Login via Twitter</a>
-                    <a class="btn btn-block btn-facebook" style="color: white;"> <i class="fab fa-facebook-f"></i>   Login via facebook
-                    </a>
+                    <a class="btn btn-block btn-facebook" style="color: white;"> <i class="fab fa-facebook-f"></i>   Login via
+                        facebook</a>
                 </p>
                 <p class="divider-text">
                     <span class="bg-light">OR</span>
@@ -25,30 +25,31 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="nombre" type="text" [(ngModel)]="register.nombre" autocomplete="off">
+                        <input name="" class="form-control" placeholder="nombre" type="text" [(ngModel)]="register.nombre">
                     </div>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="apellido" type="text" [(ngModel)]="register.apellido" autocomplete="off">
+                        <input name="" class="form-control" placeholder="apellido" type="text" [(ngModel)]="register.apellido">
                     </div>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fas fa-sort"></i></span>
                         </div>
-                        <input name="" class="form-control" placeholder="edad" type="number" [(ngModel)]="register.edad" autocomplete="off">
+                        <input name="" class="form-control" placeholder="edad" type="number" [(ngModel)]="register.edad">
                     </div>
                     <label>Fecha de nacimiento</label>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-birthday-cake"></i></span>
                         </div>
-                        <input name="" class="datepicker" placeholder="Día/Mes/Año" type="date" [(ngModel)]="register.fechaDeNacimiento" autocomplete="off">
+                        <input name="" class="form-control" placeholder="Día/Mes/Año" type="text"
+                            [(ngModel)]="register.fechaDeNacimiento">
                     </div>
                     <label>Género</label>
                     <div class="form-group input-group">
-                        <select id="inputState" class="form-select" [(ngModel)]="register.genero" autocomplete="off"><i class="fas fa-venus-mars"></i>
+                        <select id="inputState" class="form-select" [(ngModel)]="register.genero" ><i class="fas fa-venus-mars"></i>
                             <option disabled selected>Elegir...</option>
                             <option>Femenino</option>
                             <option>Masculino</option>
@@ -59,43 +60,45 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user-edit"></i></span>
                         </div>
-                        <input name="" class="form-control" placeholder="nombre de usuario" type="text" [(ngModel)]="register.usuario" autocomplete="off">
+                        <input name="" class="form-control" placeholder="nombre de usuario" type="text"
+                            [(ngModel)]="register.usuario">
                     </div>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-money-check"></i></span>
                         </div>
-                        <input name="" class="form-control" placeholder="identificación" type="number" [(ngModel)]="register.cedula" autocomplete="off">
+                        <input name="" class="form-control" placeholder="identificación" type="number" [(ngModel)]="register.cedula">
                     </div>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="numero de telefono" type="number" [(ngModel)]="register.telefono" autocomplete="off">
+                        <input name="" class="form-control" placeholder="numero de telefono" type="number"
+                            [(ngModel)]="register.telefono">
                     </div>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="correo electronico" type="text" [(ngModel)]="register.email" autocomplete="off">
+                        <input name="" class="form-control" placeholder="correo electronico" type="text"
+                            [(ngModel)]="register.email">
                     </div>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-lock" ></i> </span>
                         </div>
-                        <input class="form-control" style="margin-right: 2cm;" placeholder="Create password" type="password" [(ngModel)]="register.contrasena" id='pass' autocomplete="off">
+                        <input class="form-control" placeholder="Create password" type="password" [(ngModel)]="register.contrasena" id='pass'>
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fas fa-eye-slash" (click)='ocultarContrasena()'></i> </span>
-                        </div>
+                        </div> 
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fas fa-eye" (click)="mostrarContrasena()"  ></i> </span>
-                        </div>
-                    </div>
+                        </div> 
+                    </div>                    
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block" (click)="insertarPersonas()"> Crear cuenta </button>
                     </div>
-                    <p class="text-center">Ya tienes una cuenta? <a routerLink="/login"><a href="/login">Log in</a></a>
-                    </p>
+                    <p class="text-center">Ya tienes una cuenta? <a routerLink="/login">Log in</a> </p>
                 </form>
             </article>
         </div>
