--- a/src/app/animales/eliminar-animales/eliminar-animales.component.html
+++ b/src/app/animales/eliminar-animales/eliminar-animales.component.html
@@ -10,26 +10,26 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
     <ul class="text-center">
         <li>
             <label for="codigo">Codigo:</label>
-            <input type="texto" id="codigo" name="animal_codigo" [(ngModel)]="codigo">
+            <input type="texto" id="codigo" name="animal_codigo">
         </li>
         <li>
             <label for="nombre">Nombre:</label>
-            <input type="texto" id="nombre" name="animal_nombre" [(ngModel)]="nombre">
+            <input type="texto" id="nombre" name="animal_nombre">
         </li>
         <li>
             <label for="especie">Especie:</label>
-            <input type="texto" id="especie" name="animal_especie" [(ngModel)]="especie">
+            <input type="texto" id="especie" name="animal_especie">
         </li>
         <li>
             <label for="fechaNacimiento">FechaNacimiento:</label>
-            <input type="texto" id="fechaNacimiento" name="animal_edad" [(ngModel)]="fechaNacimiento">
+            <input type="texto" id="fechaNacimiento" name="animal_edad">
         </li>
         <li>
             <label for="fechaIngreso">FechaIngreso:</label>
-            <input type="texto" id="fechaIngreso" name="animal_ingreso" [(ngModel)]="fechaIngreso">
+            <input type="texto" id="fechaIngreso" name="animal_ingreso">
         </li>
         <li>
-            <button type="submit" class="btn btn-success" (click)="insertarAnimales()"><i class="far fa-save"></i>
+            <button type="submit" class="btn btn-success"><i class="far fa-save"></i>
                 Eliminar</button>
         </li>
 
@@ -44,24 +44,24 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
             border: 1px solid #CCC;
             border-radius: 1em;
         }
-
+        
         ul {
             list-style: none;
             padding: 0;
             margin: 0;
         }
-
+        
         form li+li {
             margin-top: 1em;
         }
-
+        
         label {
             /* Tamaño y alineación uniforme */
             display: inline-block;
             width: 90px;
             text-align: center;
         }
-
+        
         input,
         textarea {
             /* Para asegurarse de que todos los campos de texto tienen la misma configuración de letra
@@ -73,26 +73,26 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
             /* Hacer coincidir los bordes del campo del formulario */
             border: 1px solid #999;
         }
-
+        
         input:focus,
         textarea:focus {
             /* Destacado adicional para elementos que tienen el cursor */
             border-color: rgb(76, 108, 156);
         }
-
+        
         textarea {
             /* Alinear los campos de texto multilínea con sus etiquetas */
             vertical-align: top;
             /* Proporcionar espacio para escribir texto */
             height: 5em;
         }
-
+        
         .button {
             /* Alinear los botones con los campos de texto */
             padding-left: 90px;
             /* mismo tamaño que los elementos de la etiqueta */
         }
-
+        
         button {
             /* Este margen adicional representa aproximadamente el mismo espacio que el espacio
      entre las etiquetas y sus campos de texto */
